--- a/api/.env
+++ b/api/.env
@@ -4,3 +4,4 @@ MYSQLHOST=roundhouse.proxy.rlwy.net:36985
 MYSQLPASSWORD=6g5g1E2GE1435feBcd5h55de4CH1DGaa
 MYSQLPORT=36985
 MYSQLUSER=root
+LD_SERVER_KEY=
